--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -29,6 +29,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-country-flag": "^3.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-multi-carousel": "^2.8.5",
     "server-only": "^0.0.1",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
